// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavigationBarUserSection > Snapshots > matches the snapshot logged in state 1`] = `
<div>
  <div
    class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6"
  >
    <a
      class="text-sm font-medium text-gray-700  cursor-pointer"
    >
      John
       
      Doe
    </a>
    <span
      aria-hidden="true"
      class="h-6 w-px bg-gray-200"
    />
    <a
      class="text-sm font-medium text-gray-700 hover:text-indigo-500 cursor-pointer"
    >
      Sign out
    </a>
  </div>
</div>
`;

exports[`NavigationBarUserSection > Snapshots > matches the snapshot logged out state 1`] = `
<div>
  <div
    class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6"
  >
    <a
      class="text-sm font-medium text-gray-700 hover:text-indigo-500 cursor-pointer"
    >
      Sign in
    </a>
    <span
      aria-hidden="true"
      class="h-6 w-px bg-gray-200"
    />
    <a
      class="text-sm font-medium text-gray-700 hover:text-indigo-500 cursor-pointer"
    >
      Register
    </a>
  </div>
</div>
`;
